# FastAPI-model-deployment

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docker-ci/: test_3.9
k8s_dev/CHART_NAME/: Chart.yaml  values.yaml
k8s_dev/CHART_NAME/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s_dev/CHART_NAME/templates/tests/: test-connection.yaml
k8s_dev/chart_example/: Chart.yaml  values.yaml
k8s_dev/chart_example/templates/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
model_deployment_app/: main.py  model.py
tests/: test_model_deployment_app.py
